--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css" />
   <link href="//cdn.quilljs.com/1.3.2/quill.snow.css" rel="stylesheet">
+  <link href="public/bundle.css" rel="stylesheet">
   <title>Tracker</title>
 </head>
 
 <body>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.0.6/custom-elements.min.js"></script>
 <script src="public/bundle.js" charset="utf-8" defer></script>
-
 </html>
